# pyFlyway

./: .pre-commit-config.yaml  .pylintrc  README.md  conf.yml  development.json  development.yml  docker-compose.yml  flyway.py  pyproject.toml  setup.py  test.py
.github/: dependabot.yml  pull_request_template.md
docker/database/: Dockerfile
docker/database/sql/: 01_create_tablespaces.sql  02_create_users.sql
flyway_wrapper/: __init__.py  flyway_wrapper.py
pyFlyway/: errors.py  pyFlyway.py
pyflyway/: errors.py  pyflyway.py
wrapper/: __init__.py  wrapper.py
