[project]
name = 'flyway-wrapper'
version = '0.0.1'
authors = [
  { name='pycodeBE' },
]
description = 'Flyway wrapper'
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: MIT License',
    'Operating System :: OS Independent',
]

[tool.setuptools]
packages = ['wrapper',]